--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
     "@angular/router": "~10.0.4",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@swimlane/ngx-datatable": "^17.1.0",
+    "angular-datatables": "^9.0.2",
     "bootstrap": "^4.5.0",
+    "datatables.net": "^1.10.21",
+    "datatables.net-dt": "^1.10.21",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
+    "mdbootstrap": "^4.19.1",
     "moment": "^2.27.0",
     "ng2-currency-mask": "^9.0.2",
     "rxjs": "~6.5.5",
@@ -35,9 +40,11 @@
     "@angular-devkit/build-angular": "~0.1000.3",
     "@angular/cli": "~10.0.3",
     "@angular/compiler-cli": "~10.0.4",
-    "@types/node": "^12.11.1",
+    "@types/datatables.net": "^1.10.19",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.1",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
