--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start": "ng build && node server.js"
+    "start": "npm i && ng build && node server.js"
   },
   "private": true,
   "dependencies": {
